--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,14 +1,12 @@
 
 .nav {
-  display: none;
-  flex-direction: column;
   align-items: center;
   gap: 1rem;
 }
 
 /* Show navigation when menu is open */
 .nav.open {
-  display: flex;
+  display: flex !important;
 }
 
 /* Links */
@@ -31,9 +29,9 @@
 }
 
 /* Medium Screens*/
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .nav {
-    display: flex;
+    display: none !important;
     flex-direction: row;
     gap: 1.5rem;
   }
